@@ -6,7 +6,7 @@
   libssh2 SFTP client integration into qore
 
   Copyright 2009 Wolfgang Ritzinger
-  Copyright 2010 - 2015 Qore Technologies, sro
+  Copyright 2010 - 2016 Qore Technologies, sro
 
   This library is free software; you can redistribute it and/or
   modify it under the terms of the GNU Lesser General Public
@@ -310,6 +310,8 @@ string SFTPClient::getTextFile(string path, timeout timeout = 60s, *string encod
     @param local_path the local filesystem pathname to save the file to
     @param timeout an integer giving a timeout in milliseconds or a relative date/time value (ex: \c 15s for 15 seconds)
 
+    @return the number of bytes transferred
+
     @throw SSH2-ERROR socket error sending data; timeout on socket; invalid SFTP protocol response; server returned an error message
     @throw SFTPCLIENT-TIMEOUT timeout in network operation
 
@@ -319,8 +321,8 @@ string SFTPClient::getTextFile(string path, timeout timeout = 60s, *string encod
 
     @since ssh2 1.0
 */
-SFTPClient::retrieveFile(string remote_path, string local_path, timeout timeout = 60s, int mode = 0644) [dom=FILESYSTEM] {
-   myself->sftpRetrieveFile(remote_path->getBuffer(), local_path->getBuffer(), (int)timeout, mode, xsink);
+int SFTPClient::retrieveFile(string remote_path, string local_path, timeout timeout = 60s, int mode = 0644) [dom=FILESYSTEM] {
+   return myself->sftpRetrieveFile(remote_path->getBuffer(), local_path->getBuffer(), (int)timeout, mode, xsink);
 }
 
 //! Saves a file on the remote server from a binary argument and returns the number of bytes sent; throws an exception if any errors occur
